Added the ACME Login

--- a/project.json
+++ b/project.json
@@ -41,17 +41,12 @@
       "privateWorkflows": []
     },
     "processOptions": {
-      "ignoredFiles": []
+      "ignoredFiles": [
+        "Git_Operations.xaml",
+        "ACME_Login.xaml"
+      ]
     },
-    "fileInfoCollection": [
-      {
-        "editingStatus": "InProgress",
-        "testCaseId": "66a8433a-d7a6-48ee-a8da-e6f8b947ba27",
-        "testCaseType": "TestCase",
-        "executionTemplateInvokeIsolated": false,
-        "fileName": "Git_Operations.xaml"
-      }
-    ],
+    "fileInfoCollection": [],
     "saveToCloud": false
   },
   "expressionLanguage": "VisualBasic",
